# crolk

./: .gitignore  Cargo.toml  README.md  TODO.md  shell.nix
resources/: crolk.desktop
src/: gui.rs  main.rs  style.css
src/gui/: alarm.rs  stopwatch.rs  timer.rs
